# anomaly

./: .gitignore  CMakeLists.txt  notes.org
data/config/: iris.ini  path.ini  test.ini
include/: #pack.hpp#  .#pack.hpp  array.hpp  fsevents.h  math.hpp  pack.hpp  pipeline.hpp  platform.hpp  som.hpp  types.hpp
include/glad/: glad.h
include/gui/: ogl.hpp
lib/: glfw3dll.exp
src/: feature.cpp  gen.cpp  glad.c  gui.cpp  ini.cpp  math.cpp  pack.cpp  platform.cpp  som.cpp  train.cpp  utils.cpp
src/gui/: main.cpp  ogl.cpp
